--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "knplabs/knp-paginator-bundle": "^2.8",
+        "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "4.2.*",
+        "symfony/expression-language": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/web-server-bundle": "4.2.*",
@@ -60,7 +62,6 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/form": "4.2.*",
